--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background: beige;
+    background-color:
     background-position: center;
     background-size: cover;
     height: 100vh;
