--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background-color:
+    background: linear-gradient(to top, rgba(255, 255, 255, ),rgba(133, 24, 206, 0.5)), url(1.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -29,7 +29,7 @@
     font-family: Arial;
     padding-left: 20px;
     float: left;
-    padding-top: 5px;
+    padding-top: 10px;
     margin-top: 5px
 }
 
