--- a/css/styles.css
+++ b/css/styles.css
@@ -83,11 +83,11 @@ ul li a:hover{
 }
 
 .content h1{
-    font-family: 'Times New Roman';
+    font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
     padding-left: 20px;
     margin-top: 9%;
-    
+    letter-spacing: 2px;
 }
 
 .content .cn{
